[~] Fixed the css on small screen

--- a/client/src/views/Admin/All/Admin.module.scss
+++ b/client/src/views/Admin/All/Admin.module.scss
@@ -3,6 +3,7 @@
 .admin {
     width: 100%;
     height: 100vh;
+    margin-left: 250px;
     overflow: hidden;
     display: flex;
     flex-direction: column;
