--- a/client/src/views/Sprint/All/Sprint.module.scss
+++ b/client/src/views/Sprint/All/Sprint.module.scss
@@ -5,6 +5,7 @@
     margin: 0;
     padding: 20px;
     display: flex;
+    margin-left: 250px;
     overflow: auto;
     flex-direction: column;
     box-sizing: border-box;
