--- a/client/src/views/Sprint/CreateCard/CreateCard.module.scss
+++ b/client/src/views/Sprint/CreateCard/CreateCard.module.scss
@@ -2,13 +2,15 @@
 
 .create {
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    padding: 20px 0;
     box-sizing: border-box;
     background-size: cover;
     display: flex;
     align-items: center;
+    margin-left: 250px;
     justify-content: center;
-    overflow-x: scroll;
+    overflow: auto;
     &::-webkit-scrollbar {
         display: none;
     }
