--- a/client/src/views/Sprint/ModalCard/ModalCard.module.scss
+++ b/client/src/views/Sprint/ModalCard/ModalCard.module.scss
@@ -6,6 +6,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    margin-left: 250px;
     background: rgba(0, 0, 0, .8);
     display: flex;
     justify-content: center;
